# webtronics_test

./: .env.temp  Dockerfile  README.md  docker-compose.yml  pyproject.toml
project/: conftest.py
project/config/: settings.py  urls.py
project/post_app/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
project/post_app/migrations/: 0001_initial.py  0002_initial.py
project/user_app/: serializers.py  tests.py  urls.py  views.py
project/user_app/migrations/: 0001_initial.py
